# cudaPcl

./: CMakeLists.txt
cmake/Modules/: FindcudaPcl.cmake
cuda/: convolutionSeparable.cu  cuda_pcl_helpers.cu
include/cudaPcl/: depthGuidedFilter.hpp  depthGuidedFilter_impl.hpp  normalExtractSimpleGpu.hpp  normalExtractSimpleGpu_impl.hpp  openniSmoothNormalsGpu.hpp
include/jsCore/: cuda_global.h  gpuMatrix.hpp  timer.hpp  timerLog.hpp  vmf.h  vmf_impl.h
python/CudaNormals/: gpu_normals.cpp  gpu_normals.pyx
test/: openniSmoothNormals.cpp
